<resources>
    <string name="app_name">happsUT</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_page">homePageActivity</string>

    <string-array name="pages_array">
        <item>homePage</item>
        <item>searchPage</item>

        <item>Switch to button mode</item>
    </string-array>
    <string name="title_activity_login_page">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_home_page_user">homePageUser</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="date_from">Date From</string>
    <string name="starting_date">Starting Date</string>
    <string name="date_to">Date To</string>
    <string name="ending_date">Ending Date</string>
    <string name="create_event">Create Event</string>
    <string name="description">Description</string>
    <string name="description_of_event">Description of Event</string>
    <string name="time_from">Time From</string>
    <string name="starting_time">Starting Time</string>
    <string name="location">Location</string>
    <string name="location_of_event">Location of Event</string>
    <string name="event_name">Event Name</string>
    <string name="name_of_event">Name of Event</string>
    <string name="add_tags">Add Tags</string>
    <string name="time_to">Time To</string>
    <string name="ending_time">Ending Time</string>
    <string name="to">to</string>
    <string name="edit_event">Edit Event</string>
    <string name="edit_tags">Edit Tags</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_page">userPage</string>
    <string name="title_activity_hp_user">hpUser</string>

</resources>
